// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`elements/content-sidebar/SidebarNav should render activity tab 1`] = `
<nav>
  <SidebarNavButton
    interactionTarget="sidebaractivity"
    isSelected={false}
    onClick={[Function]}
    tooltip={
      <FormattedMessage
        defaultMessage="Activity"
        id="be.sidebarActivityTitle"
      />
    }
  >
    <IconChatRound />
  </SidebarNavButton>
</nav>
`;

exports[`elements/content-sidebar/SidebarNav should render details tab 1`] = `
<nav>
  <SidebarNavButton
    interactionTarget="sidebardetails"
    isSelected={false}
    onClick={[Function]}
    tooltip={
      <FormattedMessage
        defaultMessage="Details"
        id="be.sidebarDetailsTitle"
      />
    }
  >
    <IconDocInfo />
  </SidebarNavButton>
</nav>
`;

exports[`elements/content-sidebar/SidebarNav should render metadata tab 1`] = `
<nav>
  <SidebarNavButton
    interactionTarget="sidebarmetadata"
    isSelected={false}
    onClick={[Function]}
    tooltip={
      <FormattedMessage
        defaultMessage="Metadata"
        id="be.sidebarMetadataTitle"
      />
    }
  >
    <IconMetadataThick />
  </SidebarNavButton>
</nav>
`;

exports[`elements/content-sidebar/SidebarNav should render skills tab 1`] = `
<nav>
  <SidebarNavButton
    interactionTarget="sidebarskills"
    isSelected={false}
    onClick={[Function]}
    tooltip={
      <FormattedMessage
        defaultMessage="Skills"
        id="be.sidebarSkillsTitle"
      />
    }
  >
    <IconMagicWand />
  </SidebarNavButton>
</nav>
`;

exports[`elements/content-sidebar/SidebarNav should select activity tab 1`] = `
<nav>
  <SidebarNavButton
    interactionTarget="sidebaractivity"
    isSelected={true}
    onClick={[Function]}
    tooltip={
      <FormattedMessage
        defaultMessage="Activity"
        id="be.sidebarActivityTitle"
      />
    }
  >
    <IconChatRound />
  </SidebarNavButton>
  <SidebarNavButton
    interactionTarget="sidebarskills"
    isSelected={false}
    onClick={[Function]}
    tooltip={
      <FormattedMessage
        defaultMessage="Skills"
        id="be.sidebarSkillsTitle"
      />
    }
  >
    <IconMagicWand />
  </SidebarNavButton>
  <SidebarNavButton
    interactionTarget="sidebarmetadata"
    isSelected={false}
    onClick={[Function]}
    tooltip={
      <FormattedMessage
        defaultMessage="Metadata"
        id="be.sidebarMetadataTitle"
      />
    }
  >
    <IconMetadataThick />
  </SidebarNavButton>
</nav>
`;
